# PK-Rust

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: ci.yml
src/: PKRust.rs  lib.rs  main.rs  moves.pkmn  pkmnLib.rs  pkmod.rs  species.pkmn
src/PKRust/: CreatureData.rs  SaveLoader.rs  addresses.rs  creatureData.rs  saveLoader.rs  utils.rs
src/PKRust/CreatureData/: Pkmn.rs  PkmnMove.rs  PkmnSpecies.rs  PkmnType.rs  pokemon.rs  pokemonMove.rs  pokemonSpecies.rs
src/PKRust/creatureData/: pokemon.rs  pokemonMove.rs  pokemonSpecies.rs  pokemonStats.rs  pokemonStatusCondition.rs
src/pkmnLib/: CreatureData.rs  SaveLoader.rs  addresses.rs  utils.rs
src/pkmnLib/CreatureData/: Pkmn.rs  PkmnMove.rs  PkmnSpecies.rs  PkmnType.rs
test/: POKEMON BLUE.sav  POKEMON CRYSTAL.sav  POKEMON YELLOW 2.sav  POKEMON YELLOW.sav  POKEpi.SAV
ui/: index.html  style.css
ui/scripts/: DOM-generation-script.js  save-script.js  stats-display-script.js
ui/scripts/react/: App.js
ui/scripts/react/components/: SaveDisplay.js  SaveEditor.js
ui/stylesheets/: boxes-style.css  display-style.css  editor-style.css  style.css
