[package]
name = "PKRust"
version = "0.1.0"
description = "A CLI App"
authors = ["CatRass"]
license = ""
repository = ""
default-run = "PKRust"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
# custom-protocol = [ "tauri/custom-protocol" ]
